--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
 		<div class="row">
 
 			<div class="col-md-6 col-sm-12">
-				<img src="images/3.JPG" class="img-responsive" alt="Overview">
+				<img src="images/3.jpg" class="img-responsive" alt="Overview">
 				<blockquote class="wow fadeInUp" data-wow-delay="1.9s">CLUB CHAMPION REGIONAL</blockquote>
 			</div>
 
 			<div class="col-md-1"></div>
 
 			<div class="col-md-6 col-sm-12">
-				<img src="images/8.JPG" class="img-responsive" alt="Overview">
+				<img src="images/8.jpg" class="img-responsive" alt="Overview">
 				<blockquote class="wow fadeInUp" data-wow-delay="1.9s">CLUB CHAMPION NATIONAL</blockquote>
 			</div>
 
@@ -167,7 +167,7 @@
 
 			<div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="1.9s">
 				<div class="trainer-thumb">
-					<img src="images/2.JPG" class="img-responsive" alt="Trainer">
+					<img src="images/2.jpg" class="img-responsive" alt="Trainer">
 						<div class="trainer-overlay">
 							<div class="trainer-des">
 								<h2>Championnat</h2>
@@ -185,7 +185,7 @@
 
 			<div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="2s">
 				<div class="trainer-thumb">
-					<img src="images/1.JPG" class="img-responsive" alt="Trainer">
+					<img src="images/1.jpg" class="img-responsive" alt="Trainer">
 						<div class="trainer-overlay">
 							<div class="trainer-des">
 								<h2>La promotion</h2>
@@ -203,7 +203,7 @@
 
 			<div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="2.3s">
 				<div class="trainer-thumb">
-					<img src="images/10.JPG" class="img-responsive" alt="Trainer">
+					<img src="images/10.jpg" class="img-responsive" alt="Trainer">
 						<div class="trainer-overlay">
 							<div class="trainer-des">
 								<h2>L'intégration sociale</h2>
