--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 			<div class="col-md-1"></div>
 
 			<div class="col-md-6 col-sm-12">
-				<img src="images/9.PNG" class="img-responsive" alt="Overview">
+				<img src="images/9.png" class="img-responsive" alt="Overview">
 				<blockquote class="wow fadeInUp" data-wow-delay="1.9s">Mame Diarra GAKOU CEINTURE NOIRE 1é DANG</blockquote>
 			</div>
 
