--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			
 		</div>
 		<div class="collapse navbar-collapse">
-			<img src="images/logoo.JPG" width="70px" height="50px">
+			<img src="images/logoo.JPG" width="80px" height="50px">
 			<ul class="nav navbar-nav navbar-right main-navigation">
 				
 				<li><a href="#home" class="smoothScroll">Acceuil</a></li>
@@ -272,7 +272,7 @@
 			<div class="wow fadeInUp col-md-6 col-sm-12" data-wow-delay="0.9s">
 				<div class="blog-thumb">
 					<span class="blog-date">Song luyen MOT</span>
-					<h3 class="blog-title"><a href="">Un enchainement d'attache et de contre attaque</a></h3>
+					<h3 class="blog-title"><a href="">Un enchainement d'attaques et de contre-attaques</a></h3>
 					<h5 id="blog-author">1é niveau</h5>
 				</div>
 			</div>
@@ -446,11 +446,12 @@
 				<h2>horaires d'entrainement</h2>
 					<div>
 						<h5>Centre don Bosco</h5>
-						<h4>Lundi au Vendredi 20H a 22h</h4>
+						<h4>Adultes Lundi au Vendredi 20H a 22h</h4>
 					</div>
 					<div>
 						<h5>Centre incubateur yoff</h5>
-						<h4>Enfants mercredi et dimanche 9h-12h</h4>
+						<h4>Enfants mercredi et samedi 17h-19h</h4>
+						<h4>Enfants dimanche 9h-12h</h4>
 					</div>
 			</div>
 
